--- a/node/frontend/public/index.html
+++ b/node/frontend/public/index.html
@@ -33,7 +33,7 @@
             </label>
           </div>
 
-          <h1 class="text-md font-semibold mt-4 text-gray-900">Nach dem Text dieses Tweets, wie steht die/der AutorIn zum Thema "Immunitätsausweis"?</h1>
+          <h1 class="text-md font-semibold mt-4 text-gray-900">Nach dem Text dieses Tweets, wie steht die/der AutorIn zum Thema "Kontaktbeschränkungen"?</h1>
           <div class="flex mt-4 pb-5 opacity-50 pointer-events-none buttons-wrapper">
             <label class="flex-1">
               <input type="radio" name="stance" id="disagree" class="absolute -z-10 opacity-0 peer" value="disagree" required>
